--- a/templates/home.html
+++ b/templates/home.html
@@ -7,6 +7,6 @@
 <body>
   <h1>HW</h1>
   <p>URL format: http://127.0.0.1:5000/api/v1/word<p>
-  <p>URL example: http://127.0.0.1:5000/api/v1/turtle<p>
+  <p>URL example: http://127.0.0.1:5000/api/v1/European polecat<p>
 </body>
 </html>
